--- a/jersey-poc-api-impl/pom.xml
+++ b/jersey-poc-api-impl/pom.xml
@@ -11,7 +11,35 @@
 
     <groupId>org.poc.api.impl</groupId>
     <artifactId>jersey-poc-api-impl</artifactId>
+<dependencies>
+    <dependency>
+        <groupId>org.hibernate.orm</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.6.13.Final</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jersey</artifactId>
+        <version>3.3.4</version>
+    </dependency>
+    <dependency>
+        <groupId>org.poc.api</groupId>
+        <artifactId>jersey-poc-api</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+        <groupId>org.hibernate.orm</groupId>
+        <artifactId>hibernate-jpamodelgen</artifactId>
+        <version>6.4.4.Final</version>
+        <scope>provided</scope>
+    </dependency>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>3.4.5</version>
+    </dependency>
+</dependencies>
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
