--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
         <module>jersey-poc-api</module>
         <module>jersey-poc-api-impl</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
