--- a/jersey-poc-api/pom.xml
+++ b/jersey-poc-api/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>jersey-poc-api</artifactId>
 <dependencies>
     <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.38</version>
+    </dependency>
+    <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-jersey</artifactId>
         <version>3.3.4</version>
